Seperated functions into modules

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [OpenAI]
-model = gpt-4-1106-preview
+gpt_model = gpt-4-1106-preview
+#whisper_model = base
+whisper_model = large-v3
 
 [Storage_Paths]
 video_directory = assets/01_input_video
